# zed-rest-client

./: .gitignore  Cargo.toml  NOTICE  README.md  extension.toml  extension.wasm
languages/http/: config.toml  highlights.scm  injections.scm
src/: lib.rs
